# nonebot-plugin-tsugu-bangdream-bot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
nonebot_plugin_tsugu_bangdream_bot/: __init__.py  _client.py  _commands.py  _utils.py  config.py
