[project]
name = "nonebot-plugin-tsugu-bangdream-bot"
version = "0.4.1"
description = "Koishi-Plugin-Tsugu-BanGDream-Bot 的 NoneBot2 实现"
authors = [
    {name = "WindowsSov8forUs", email = "qwertyuiop2333@hotmail.com"},
]
dependencies = [
    "nonebot2>=2.2.1",
    "nonebot-plugin-alconna>=0.46.1",
    "tsugu-api-python>=1.4.2",
    "nonebot-plugin-userinfo>=0.2.4",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true